Added Dr. title as requested by EPFL

--- a/metadata.toml
+++ b/metadata.toml
@@ -41,7 +41,7 @@ language = "en"
     injected_keywords_list = ["Data Analyst", "GCP", "Python", "SQL", "Tableau"]
 
 [personal]
-    first_name = "Edward"
+    first_name = "Dr. Edward"
     last_name = "Linscott"
 
     # The order of this section will affect how the entries are displayed
