--- a/metadata.toml
+++ b/metadata.toml
@@ -37,7 +37,7 @@ language = "en"
     inject_ai_prompt = false
 
     # Decide if you want to inject keywords or not
-    inject_keywords = true
+    inject_keywords = false
     injected_keywords_list = ["Data Analyst", "GCP", "Python", "SQL", "Tableau"]
 
 [personal]
@@ -75,6 +75,6 @@ language = "en"
 # i.e. [[lang.ru]]
 # each section must contains the following fields
 [lang.en]
-    header_quote = "Researcher seeking to create the next generation of state-of-the-art methods for computational spectroscopy"
+    header_quote = "Researcher seeking to create the next generation of state-of-the-art methods for computational materials science and quantum chemistry"
     cv_footer = "Curriculum vitae"
     letter_footer = "Cover letter"
